# ray-tracing

./: AllHeader.hpp  Assertions.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Colors.hpp  Hit.hpp  Hittable.hpp  Material.hpp  README.md  RawTexture.cpp  RawTexture.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Snapshot.cpp  Snapshot.hpp  Sphere.cpp  Sphere.hpp  Timer.hpp  Utils.hpp  Vec3.hpp  main.cpp
Materials/: Glass.cpp  Glass.hpp  Lambert.cpp  Lambert.hpp  Material.hpp  Metal.cpp  Metal.hpp
